@@ -1,5 +1,10 @@
 2004-11-28 Bart Hakvoort  <gparted@users.sf.net>
 
+	* src/Dialog_Disklabel.cc,
+	  src/GParted_Core.cc: minor stringchanges (typos)
+
+2004-11-28 Bart Hakvoort  <gparted@users.sf.net>
+
 	* src/Makefile.am: sorted sourcefiles alphabetically, i know, pretty useless, but i like it :P
 
 2004-11-28 Bart Hakvoort  <gparted@users.sf.net>
